Fixed visibility of projects-brief on big screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -696,7 +696,7 @@ section.projects {
 
     .projects-brief {
         left: 23%;
-        top: 50%;
+        top: 45%;
     }
 
     .col.projects-cover {
